Fixes overlap of homepage buttons.

--- a/_sass/media/_screen.scss
+++ b/_sass/media/_screen.scss
@@ -422,7 +422,7 @@ header[role=banner] {
   margin: rhythm(1) 0;
 
   li {
-    display:inline;
+      margin: rhythm(1) 0;
   }
 
   a {
